# cip

./: README.md  pyproject.toml
src/: demo.py
src/cip/: jobs.py  pipeline.py  pipelines.py  stages.py  utils.py
src/cip/utils/: tools.py
tests/: test_job.py  test_pipeline.py  test_stage.py  test_tools.py
